--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,11 @@
             <version>2.7.12</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.groupdocs</groupId>
+            <artifactId>groupdocs-comparison</artifactId>
+            <version>17.3.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
